--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
