--- a/restaurant/package.json
+++ b/restaurant/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "fetch-mock": "^9.11.0",
+    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
